--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\20363\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=/Users/soyeon/Library/Application Support/NetBeans/23/build.properties
