--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/simpleerp
 endorsed.classpath=
 excludes=
-file.reference.derby.jar=/Users/soyeon/Downloads/db-derby-10.14.2.0-bin/lib/derby.jar
-file.reference.derbyclient.jar=/Users/soyeon/Downloads/db-derby-10.14.2.0-bin/lib/derbyclient.jar
+file.reference.derby.jar-1=E:\\25-s1\\comp603\\week9\\PDC_Tutorials\\lib\\derby.jar
+file.reference.derbyclient.jar-1=E:\\25-s1\\comp603\\week9\\PDC_Tutorials\\lib\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.derbyclient.jar}:\
-    ${file.reference.derby.jar}
+    ${file.reference.derby.jar-1}:\
+    ${file.reference.derbyclient.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
