--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/simpleerp
 endorsed.classpath=
 excludes=
-file.reference.derby.jar=lib/derby.jar
-file.reference.derbyclient.jar=lib/derbyclient.jar
+file.reference.derby.jar-1=E:\\25-s1\\comp603\\week9\\PDC_Tutorials\\lib\\derby.jar
+file.reference.derbyclient.jar-1=E:\\25-s1\\comp603\\week9\\PDC_Tutorials\\lib\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.derby.jar}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derby.jar-1}:\
+    ${file.reference.derbyclient.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,7 +79,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=simpleerp
-main.class=simpleerp.Main
+main.class=gui.LoginFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
